Modified implementation of GoalContainer